# journalist

./: CLAUDE.md  Cargo.toml  flake.nix  rustfmt.toml
.github/workflows/: release.yml
migrations/: 0001_initial_schema.sql
src/: cli.rs  entities.rs  lib.rs
src/application/: app.rs  cli.rs  config.rs  mod.rs  tui.rs
src/application/tui/: mod.rs  theme.rs  tui.rs  tui_debug.rs  week_view.rs
src/domain/: bullet.rs  date_range.rs  entry.rs  journal.rs  mod.rs
src/infrastructure/: duckdb_storage.rs  filesystem.rs  hooks.rs  mod.rs  parser.rs  repository.rs  storage.rs  test_utils.rs
src/infrastructure/plugins/: duckdb_sync.rs  mod.rs  simple_logger.rs
