[package]
name = "journalist"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "journalist"
path = "src/cli.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
ratatui = "0.29.0"
