[package]
name = "journalist"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "journalist"
path = "src/cli.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
duckdb = "1.1"
ratatui = { version = "0.29.0", features = ["crossterm"] }
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.0"
